--- a/package.json
+++ b/package.json
@@ -1,14 +1,24 @@
 {
-  "name": "cox-auto",
+  "name": "react-node-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "babel-plugin-react-css-modules": "^5.2.1",
+    "concurrently": "^4.1.0",
+    "css-loader": "^2.1.1",
+    "prop-types": "latest",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
-    "react-scripts": "2.1.5"
+    "react-modal": "^3.8.1",
+    "react-scripts": "2.1.5",
+    "shortid": "^2.2.14",
+    "style-loader": "^0.23.1",
+    "url-loader": "^1.1.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "node server.js",
+    "webpack": "webpack --mode development ./src/index.js --output static/js/main.js",
+    "server": "node server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -21,5 +31,14 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "@babel/core": "^7.3.4",
+    "@babel/preset-env": "^7.3.4",
+    "@babel/preset-react": "^7.0.0",
+    "babel-loader": "^8.0.5",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "webpack": "^4.29.6",
+    "webpack-cli": "^3.2.3"
+  }
 }
